# pyfinch

./: .gitignore  README.md  about.txt  binary.py  finch.py  lexome.py  preprocessor.py  pyfinch1.diff  pyproject.toml  terminal.py  visual.py
config/: default.cfg  default.finch  master_lexome.cfg
lexome/: default.cfg  mod1.cfg
org/: org1.lxm  test_org.lxm
pyfinch/: aviary.py  bytedict.py  const.py  finch.py  lexome.py  preprocessor.py  terminal.py  visual.py
src/: aviary.py  binary.py  bytedict.py  finch.py  lexome.py  preprocessor.py  terminal.py  visual.py
