[tool.poetry]
name = "pyfinch"
version = "0.1.0"
description = ""
authors = ["Ethan <ethan@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.scripts]
pyfinch = "pyfinch.terminal:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
